# slicePDF

./: .gitattributes  README.md  index.html  package-lock.json  package.json  splashscreen.html
.github/workflows/: release.yml
public/: splash.json  splashscreen.html
src/: App.css  App.tsx  layout.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/binaries/: qpdf
src-tauri/resources/binaries/macos/: libpdfium.dylib
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: image.rs  pdf.rs
src-tauri/src/services/: mod.rs
src-tauri/src/services/image/: compress.rs  conversion.rs  mod.rs
src-tauri/src/services/pdf/: compress.rs  conversion.rs  merge.rs  mod.rs  protect.rs  rotate.rs
src/components/: Footer.tsx  Header.tsx  Loading.tsx  NoFilesYet.tsx  PasswordDialog.tsx  SelectedPdfCard.tsx  ToolCard.tsx  ToolsGrid.tsx
src/contexts/: UnlockPdfContext.tsx
src/data/: filestore.ts  tools.json
src/pages/: CompressPdf.tsx  DecryptPdf.tsx  ErrorPage.tsx  ImgToPdf.tsx  MergeImageWithPdf.tsx  MergePdf.tsx  PdfToImage.tsx  ProtectPdf.tsx  ResizeImage.tsx  RotatePdfPages.tsx  compressImage.tsx
src/types/: PdfResult.ts  tools.ts
src/utils/: check_encypted.ts
