[package]
name = "slicepdf"
version = "0.1.0"
description = "A Tauri App"
authors = ["SlicedApple"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "slicepdf_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pdfium-render = "0.8.37"
tauri-plugin-fs = "2"
image = "0.25.9"
tauri-plugin-dialog = "2"
pdf-converter = "0.1.0"
lopdf = "0.34"
pdfcat = "1.0.0-beta.9"
flate2 = "1.1.8"
jpeg-encoder = "0.6.1"
libcaesium = "0.20.1"
